# parallel-bigram-trigram-analysis

./: .gitignore  CMakeLists.txt  README.md  downloader.py  graph_tracer.py  main.cpp
media/: benchmarks.json  benchmarks_backup.json
media/cpp_version/: benchmarks_ebooks.json  benchmarks_ebooks_old.json  benchmarks_threads.json
media/python_version/: benchmarks_ebooks.json  benchmarks_process.json
output/: benchmarks_example.json
python_scripts/: bigram_trigram_analyser.py  downloader.py  graph_tracer.py  requirements.py  utils.py
src/: main.cpp  utils.h
